# aoc_2023

day_08/ab_cpp/: CMakeLists.txt  README.md  main.cpp  main.h.in  wasteland_navigator.cpp  wasteland_navigator.hpp
